--- a/index.html
+++ b/index.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/tailwind_output.css" />
     <title>Tam To-do Application</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <div class="container h-screen">
+      <!-- Navigation Menu -->
+      <div
+        class="top-nav border border-light-gray max-w-ms flex flex-row flex-wrap items-center justify-between py-1.5 px-4 h-1/8"
+      >
+        <a class="h-fit" href=""><i class="hamburger-icon"></i></a>
+        <a class="px-6" href="www.tam.com"
+          ><img src="img/Logo.png" alt="tam-logo"
+        /></a>
+        <div class="grow"></div>
+        <input
+          class="border py-2 px-4 shrink w-[23rem] rounded border-light-gray mx-3 my-1"
+          type="text"
+          placeholder="Search"
+        />
 
-</body>
+        <!-- <div>
+        <a href="#"><i class="home-icon"></i></a>
+        <a href="#"><i class="profile-icon"></i></a>
+        <a href="#"><i class="cart-icon"></i></a>
+        <a href="#"><i class="gear-icon"></i></a>
+      </div> -->
+      </div>
 
+      <!-- Two-column layout -->
+      <div class="border-4 botder-black h-full">
+        <h1>hla</h1>
+        <div class="right-side"></div>
+        <div class="left-side"></div>
+      </div>
+    </div>
+  </body>
 </html>
